# deep-swe

./: README.md
bench/: .gitignore  README.md  pyproject.toml
bench/src/wfbench/: __init__.py  agent_runner.py  claude_config.py  cli.py  config.py  corpus.py  docker_cli.py  errors.py  grader.py  logging_setup.py  preflight.py  prompt.py  report.py  results.py  runner.py  runtime.py  selection.py  usage.py  write_artifacts.py
bench/tests/: conftest.py
bench/tests/fixtures/tasks/alpha-task/: instruction.md  task.toml
bench/tests/fixtures/tasks/alpha-task/tests/: test.sh
bench/tests/fixtures/tasks/beta-task/: instruction.md  task.toml
bench/tests/fixtures/tasks/beta-task/tests/: test.sh
bench/tests/fixtures/tasks/not-a-task/: README.md
bench/tests/fixtures/tasks_malformed/broken-task/: instruction.md  task.toml
bench/tests/fixtures/tasks_malformed/broken-task/tests/: test.sh
bench/tests/integration/: test_docker_smoke.py
bench/tests/unit/: test_agent_runner.py  test_claude_config.py  test_cli.py  test_corpus.py  test_docker_cli.py  test_preflight.py  test_prompt.py  test_report.py  test_results.py  test_runner.py  test_security.py  test_selection.py  test_usage.py
specs/001-workflow-bench/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-workflow-bench/checklists/: requirements.md
specs/001-workflow-bench/contracts/: cli.md
tasks/: README.md
